Fixed button alignment wrt social icons

--- a/src/langerak_gkv/sass/partials/_homepage.scss
+++ b/src/langerak_gkv/sass/partials/_homepage.scss
@@ -82,13 +82,6 @@ body.home {
   article.link-block {
     position: relative;
     padding-bottom: 45px;
-
-    footer {
-      position: absolute;
-      bottom: 15px;
-      right: 10px;
-      height: 35px;
-    }
   }
 
   section.news {
